# tofusoup

./: .coverage.query.local.38534.XXoMxNVx  .coverage.query.local.52742.XbQZMLRx  .coverage.query.local.52743.XKjEJOEx  .coverage.query.local.52744.XnPRJPPx  .coverage.query.local.52746.XQDBsdix  .coverage.query.local.52747.XLcuGwTx  .coverage.query.local.52748.XwwGvnSx  .coverage.query.local.52749.XnzXTOgx  .coverage.query.local.52752.XGEfxTfx  .coverage.query.local.52760.XofwPwyx  .coverage.query.local.52770.XPsOPJux  .coverage.query.local.52774.XVEszthx  .coverage.query.local.52784.XlPdbnux  .coverage.query.local.52789.XoYsLLix  .coverage.query.local.52795.XTCzOOQx  .coverage.query.local.52809.XkgvUHhx  .coverage.query.local.52822.XLrSLjQx  .coverage.query.local.52828.XQUvDDrx  .coverage.query.local.52836.XZXTGkSx  .coverage.query.local.52841.XqsrEvPx  .coverage.query.local.52847.XMSgHzKx  .coverage.query.local.52852.XSZMUKAx  .env.test  .gitguardian.yaml  .gitignore  .gitignore.backup  .gitleaks.toml  .pre-commit-config.yaml  .report.json  .trufflehog-exclude-paths.txt  2025-10-31-load-handoffmd-and-verify-the-accuracy-v.txt  AGENTS.md  ARCHITECTURE_REVIEW_2025-10-28.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CORRECT_PROOF.py  CROSS_LANGUAGE_DEBUGGING_FEATURES.md  CROSS_LANGUAGE_TEST_RESULTS.md  EXECUTIVE_SUMMARY.txt  (+60 more)
.archive/: code.sh
.claude/: settings.local.json
.garnish-tests/function_format_test/: provider.tf
.garnish-tests/function_lens_jq_test/: provider.tf
.garnish-tests/function_subtract_test/: subtract.tf
.github/workflows/: ci.yml  release.yml
.hypothesis/constants/: 01fcb6b70be82744  02f0bede0a3667db  03c42a896899c547  04415588ca3bd15c  04d2e8b751990b64  05c61585ccc9ac8b  05c71c73eac6dd8e  05e4517585307a4a  05ec2c16f1ec9d77  069039206090c4c6  06d6e6bbceaf5ef9  06e487bd99581f82  06ebb60de1368451  079e0825856f8c20  093ef4e0b861c37c  09d9ff3d3ca88340  0a2cbd111dce99cd  0a6228901f3731db  0abe488e8fd424cb  0ad523d337fced66  0b7f7c42e02cf01a  0cfdb490a5b23715  0d3fc16ddfa85ff9  0dc4a1de11256148  0dd100935a7966ac  0df5b7870066129c  0e57d5280f306b82  0e8c7a85852ae450  0ef48085e145b965  0f09ae8a8a47b86e  113e266a9dcf351a  11a31a1f08da3bb2  127b847fafd474b3  12cab2d419db0943  13a17c0c12516526  143c66594450f93f  1481f19828eb1c47  15635f70944164e6  1606341a4a18e861  162a546561520d77  (+421 more)
.plating-tests/function_add_test/: add.tf
.plating-tests/function_contains_test/: contains.tf
.plating-tests/function_join_test/: join.tf
.plating-tests/function_lens_jq_test/: lens_jq.tf
.plating-tests/function_max_test/: max.tf
.plating-tests/function_min_test/: min.tf
.plating-tests/function_multiply_test/: multiply.tf
.plating-tests/function_split_test/: split.tf
.plating-tests/function_type_conversion_functions_test/: type_conversion_functions.tf
.plating-tests/function_upper_test/: upper.tf
config/: defaults.py
conformance/: __init__.py  conftest.py  property_test_polyglot.py  souptest_polyglot.py  utils.py
conformance/cli_verification/: __init__.py  shared_cli_utils.py  souptest_cli_cty.py  souptest_cli_hcl.py  souptest_cli_parity.py  souptest_cli_rpc.py  souptest_cli_wire.py
conformance/cty/: __init__.py  conftest.py  python_fixture_generator.py  souptest_collections_comprehensive.py  souptest_cty_compat.py  souptest_cty_interop.py  souptest_cty_logic.py  souptest_primitives_comprehensive.py  souptest_skippable.py  souptest_structural_comprehensive.py  test_data.py  test_primitives_comprehensive.py
conformance/equivalence/: README.md  __init__.py
conformance/harness/: __init__.py  souptest_harness_cross_language.py  souptest_polyglot_strategy.py
conformance/hcl/: __init__.py  conftest.py  souptest_hcl_interop.py  souptest_hcl_logic.py  souptest_hcl_to_cty.py  test_data.py
conformance/rpc/: README.md  __init__.py  automtls_test.py  cert_manager.py  complete_matrix_test.py  comprehensive_matrix_test.py  conftest.py  focused_matrix_test.py  harness_factory.py  matrix_config.py  property_test_concurrent.py  property_test_failure_modes.py  property_test_resources.py  property_test_rpc_stress.py  rpc_mtls_config.py  run_matrix_tests.py  souptest_automtls.py  souptest_concurrent.py  souptest_cross_language.py  souptest_cross_language_comprehensive.py  souptest_cross_language_interop.py  souptest_cross_language_matrix.py  souptest_curve_compatibility.py  souptest_curve_support.py  souptest_enrichment_on_get.py  souptest_failure_modes.py  souptest_malformed.py  souptest_python_to_python.py  souptest_resources.py  souptest_rpc_kv_matrix.py  souptest_rpc_matrix_comprehensive.py  souptest_rpc_pyclient_goserver.py  souptest_rpc_stress.py  souptest_simple_matrix.py  souptest_tls.py  souptest_xdg_compliance.py  test_config.py  test_cross_language_comprehensive.py  test_curve_compatibility.py  test_enrichment_on_get.py  (+10 more)
conformance/tf/: __init__.py
conformance/utils/: __init__.py  go_interaction.py
conformance/wire/: __init__.py  property_test_wire_fuzzing.py  souptest_codec.py  souptest_edge_cases.py  souptest_property_based.py  souptest_tfwire_binary_compatibility.py  souptest_wire_binary_compatibility.py  souptest_wire_fuzzing.py  souptest_wire_logic.py  souptest_wire_python_vs_go.py
debug_harnesses/: terraform.tfstate
debug_harnesses/printenv_go/: main.go
direct/proto/: stock.proto
docs/: CHANGELOG.md  CONFIGURATION.md  PHASE_2_COMPLETE.md  README.md  faq.md  glossary.md  index.md  rpc-compatibility-matrix.md  troubleshooting.md
docs/api/: README.md  index.md
docs/architecture/: 01-overview.md  (+7 more)
features/: cty_conformance.feature  harness_management.feature  hcl_conformance.feature  wire_protocol_conformance.feature
harnesses/: README.md
scripts/: MIGRATION_SUMMARY.md  README.md  mkdocs_hooks.py  terraform.tfstate  verify_harness_cli.py
site/: 404.html  index.html  objects.inv  sitemap.xml
soup/: soup.toml  terraform.tfstate
src/: bfiles-20251010-114529.txt  bfiles-20251010-131213.txt  terraform.tfstate
tests/: __init__.py  conftest.py  terraform.tfstate  test_harness_conformance.py  test_workenv_integration.py
(+933 files in other folders)
