#
# tofusoup/pyproject.toml
#

[project]
name = "tofusoup"
description = "Cross-language conformance test suite for OpenTofu tooling."
dynamic = ["version"]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Tim Perkins", email = "code@tim.life" },
]
maintainers = [
    { name = "provide.io", email = "code@provide.io" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "provide-foundation[all]",
    "click>=8.1.0",
    "rich>=13.0.0",
    "msgpack>=1.0.0",
    "pyyaml>=6.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.7.0",
    "pytest-asyncio>=1.0.0",
    "pytest-httpx>=0.35.0",
    "pytest-json-report>=1.5.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.100.0",
    "httpx>=0.25.0",
    "respx>=0.20.0",
    "textual>=3.2.0",
    "aiosqlite>=0.19.0",
    "semver>=3.0.0",
    "mypy>=1.10.0",
    "ruff>=0.2.0",
    "jinja2>=3.1.6",
    "tomli-w>=1.0.0",
    "plating>=0.0.0.dev0",
]

[project.optional-dependencies]
cty = [
    "pyvider-cty>=0.0.113",
]
hcl = [
    "pyvider-hcl>=0.0.113",
]
rpc = [
    "pyvider-rpcplugin>=0.0.112",
    "grpcio-tools>=1.60.0",
]
all = [
    "tofusoup[cty,hcl,rpc]",
]

[project.scripts]
soup = "tofusoup.cli:entry_point"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["tofusoup*"]
namespaces = false

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.pytest.ini_options]
minversion = "6.0"
log_cli = true
log_cli_level = "DEBUG"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
pythonpath = ["src", "."]
testpaths = ["tests", "conformance"]
python_files = ["test_*.py", "*_test.py", "souptest_*.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*", "*_test"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--color=yes",
    "--benchmark-columns=min,max,mean,stddev,median,iqr,ops",
    "--benchmark-sort=mean",
    "--dist=loadscope",
    "-m", "not integration",
    "-rFE",
    # Exclude known problematic tests by default
    "-k", "not (TestRPCKVMatrix or test_pyclient_pyserver_with_mtls or test_stir)",
]
markers = [
    # Test speed/type markers
    "serial: run tests serially to avoid event loop conflicts",
    "async_unsafe: async tests that must run serially",
    "unit: fast unit tests",
    "fast: tests taking <100ms",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: benchmark/performance tests using pytest-benchmark",
    # TofuSoup specific markers
    "conformance: marks tests as conformance tests",
    "tdd: marks tests as TDD (test-driven development)",
    "browser: marks tests that use the browser UI (Textual app)",
    # Integration markers
    "integration: marks tests requiring optional dependencies",
    "integration_cty: requires CTY integration (pyvider-cty)",
    "integration_hcl: requires HCL integration (pyvider-hcl + pyvider-cty)",
    "integration_rpc: requires RPC integration (pyvider-rpcplugin)",
    # Harness markers
    "harness_go: requires Go harness",
    "harness_python: requires Python harness",
    # Environment/dependency markers
    "requires_textual: marks tests that require Textual app context",
    "requires_docker: skip if docker not available",
    "requires_network: skip if offline",
    "skip_in_ci: marks tests to skip in CI environments",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore:cannot collect test class 'Test.*' because it has a __init__ constructor:pytest.PytestCollectionWarning",
    "ignore:cannot collect test class .* because it has a __init__ constructor:pytest.PytestCollectionWarning",
    "ignore:.* KqueueSelector constructor:pytest.PytestCollectionWarning",
    "ignore:coroutine .* was never awaited:RuntimeWarning",
]
norecursedirs = [
    ".git", ".hg", ".svn", "*_build", "build", "dist", "*.egg-info",
    ".venv", "venv", "htmlcov", "docs/_build", ".hypothesis", "__pycache__",
]

[tool.pytest.ini_options]
log_levels = [
    "markdown_it = WARNING",
    "asyncio = WARNING",
]

[tool.ruff]
line-length = 111
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "B", "C90", "SIM", "PTH", "RUF"]
ignore = ["ANN401", "B008", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["tofusoup", "flavor", "pyvider", "tests"]
force-sort-within-sections = true
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
pretty = true
show_error_codes = true
show_column_numbers = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["structlog.*", "google.*", "grpc.*", "pytest.*", "jq.*", "psutil.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["tofusoup"]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if __name__ == .__main__.:", "if TYPE_CHECKING:", "def __repr__", "def __str__", "pass"]
